src/main/resources/tests/Semantics/good/endFuncPro2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
function ExampleFunction (X : integer) return integer is
begin
   return X + 1;
end;
begin
   ExampleFunction (3);
end;
