src/main/resources/tests/Semantics/bad/endFuncPro.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
function ExampleFunction (X : integer) return integer is
begin
   return X + 1;
end ExampleProcedure; -- Doit générer une erreur de compilation.
begin
   ExampleFunction (3);
end ExampleFunction; -- Doit générer une erreur de compilation.
